objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Balance2__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Balance2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_Points__c</fullName>
        <formula>IF(ISBLANK(Balance__c), &quot;0&quot;, &quot;5&quot;)</formula>
        <label>Balance Point</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Condition_Image__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Car Condition Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Car_Urgency__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Car Urgency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_notes__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <inlineHelpText>Enter any notes regarding the existing vehicle</inlineHelpText>
        <label>Car Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College_Rebate_Image__c</fullName>
        <label>College Rebate Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>College_Rebate_Points__c</fullName>
        <formula>CASE(College_Rebate__c, 
&quot;True&quot;, &quot;10&quot;,
&quot;False&quot;, &quot;0&quot;,
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>College Rebate Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College_Rebate__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>College Rebate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>False</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Super clean (just a few scratches)</fullName>
                </value>
                <value>
                    <fullName>Somewhat clean (regular wear and tear)</fullName>
                </value>
                <value>
                    <fullName>Minor damages (a few dents and dings)</fullName>
                </value>
                <value>
                    <fullName>Major damages (some really BIG dents)</fullName>
                </value>
                <value>
                    <fullName>Destroyed (oops)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Score_Points__c</fullName>
        <formula>CASE(Credit_Score__c, 
&quot;Superior (720+)&quot;, &quot;25&quot;,
&quot;Very Good (690-719)&quot;, &quot;20&quot;,
&quot;Satisfactory (650-689)&quot;, &quot;10&quot;,
&quot;Not Satisfactory (630-649)&quot;, &quot;8&quot;,
&quot;Bad (610-629)&quot;, &quot;5&quot;,
&quot;Very Bad (580-609)&quot;, &quot;0&quot;,
&quot;No Credit (520-609)&quot;, &quot;0&quot;,
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Score Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Credit Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Superior (720+)</fullName>
                </value>
                <value>
                    <fullName>Very Good (690-719)</fullName>
                </value>
                <value>
                    <fullName>Satisfactory (650-689)</fullName>
                </value>
                <value>
                    <fullName>Not Satisfactory (630-649)</fullName>
                </value>
                <value>
                    <fullName>Bad (610-629)</fullName>
                </value>
                <value>
                    <fullName>Very Bad (580-609)</fullName>
                </value>
                <value>
                    <fullName>No Credit (520-609)</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                    <isActive>false</isActive>
                    <label>Satisfactory (650-669)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal2__c</fullName>
        <label>Deal2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buy a car</fullName>
                </value>
                <value>
                    <fullName>Sell a car</fullName>
                </value>
                <value>
                    <fullName>Lease a car</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal3__c</fullName>
        <label>Deal3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buy a car</fullName>
                </value>
                <value>
                    <fullName>Lease a car</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Fees2__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Deal Fees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lower fees</fullName>
                </value>
                <value>
                    <fullName>Lower payment</fullName>
                </value>
                <value>
                    <fullName>All in</fullName>
                    <isActive>false</isActive>
                    <label>All in</label>
                </value>
                <value>
                    <fullName>Down Payment</fullName>
                    <isActive>false</isActive>
                    <label>Down Payment (Amount)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Fees_Points__c</fullName>
        <formula>CASE(Deal_Fees2__c, 
&quot;Lower payment&quot;, &quot;0&quot;,
&quot;Lower fees&quot;, &quot;0&quot;,
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Fees Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Fees__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Deal Fees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Fees</fullName>
                </value>
                <value>
                    <fullName>Lower Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Deal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buy a car</fullName>
                </value>
                <value>
                    <fullName>Sell a car</fullName>
                </value>
                <value>
                    <fullName>Lease a car</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_miles_Points__c</fullName>
        <formula>CASE(Deal_miles__c, 
&quot;5,000&quot;, &quot;0&quot;,
&quot;7,500&quot;, &quot;0&quot;,
&quot;10,000&quot;, &quot;0&quot;,
&quot;12,000&quot;, &quot;0&quot;,
&quot;15,000&quot;, &quot;0&quot;,
&quot;Don’t know&quot;, &quot;0&quot;,
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal miles Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_miles__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Deal miles</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5,000</fullName>
                </value>
                <value>
                    <fullName>7,500</fullName>
                </value>
                <value>
                    <fullName>10,000</fullName>
                </value>
                <value>
                    <fullName>12,000</fullName>
                </value>
                <value>
                    <fullName>15,000</fullName>
                </value>
                <value>
                    <fullName>Don’t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_Contract_Term_Points__c</fullName>
        <formula>CASE(Desired_Contract_Term__c, 
&quot;24 months&quot;, &quot;0&quot;,
&quot;36 months&quot;, &quot;0&quot;,
&quot;39 months&quot;, &quot;0&quot;,
&quot;42 months&quot;, &quot;0&quot;,
&quot;45 months&quot;, &quot;0&quot;,
&quot;48 months&quot;, &quot;0&quot;,
&quot;60 months&quot;, &quot;0&quot;,
&quot;72 months&quot;, &quot;0&quot;,
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desired Contract Term Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Contract_Term__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Desired Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>24 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
                <value>
                    <fullName>39 months</fullName>
                </value>
                <value>
                    <fullName>42 months</fullName>
                </value>
                <value>
                    <fullName>45 months</fullName>
                </value>
                <value>
                    <fullName>48 months</fullName>
                </value>
                <value>
                    <fullName>60 months</fullName>
                </value>
                <value>
                    <fullName>72 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date_Points__c</fullName>
        <formula>CASE(Car_Urgency__c, 
&quot;5&quot;, &quot;20&quot;,
&quot;4&quot;, &quot;10&quot;,
&quot;3&quot;, &quot;5&quot;,
&quot;2&quot;, &quot;3&quot;,
&quot;1&quot;, &quot;3&quot;,
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Points__c</fullName>
        <formula>IF(  Email !=&apos;&apos;, &quot;0&quot;, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <formula>Value(College_Rebate_Points__c)+	
Value(Credit_Score_Points__c)+
Value(Balance_Points__c)+	
Value(Year_Make_Model_VIN_Points__c)+	
Value(Ownership_Points__c)+	
Value(Desired_Contract_Term_Points__c)+	
Value(Deal_Fees_Points__c)+	
Value(Deal_miles_Points__c)+
Value(Email_Points__c)+	
Value(Due_Date_Points__c)+	
Value(Trade_Points__c)+
Value(Military_Rebate_Points__c)+
Value(Name_Points__c)+
Value(Phone_Point__c)+
Value(Registration_Points__c)+
(Maturity_Date_Points__c)</formula>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_or_Buy__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Lease or Buy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Make</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date_Points__c</fullName>
        <formula>If( Maturity_Date__c -Today() &lt;= 7,10,
if(Maturity_Date__c -Today()&gt;7 &amp;&amp; Maturity_Date__c -Today() &lt;= 14,5,
if(Maturity_Date__c -Today()&gt;14 &amp;&amp; Maturity_Date__c -Today()&lt;30,3,0))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maturity Date Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Military_Document_Image__c</fullName>
        <label>Military Document Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Military_Rebate_Points__c</fullName>
        <formula>CASE(Military_Rebate__c, 
&quot;True&quot;, &quot;10&quot;,
&quot;False&quot;, &quot;0&quot;,
&quot;0&quot;)</formula>
        <label>Military Rebate Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Rebate__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Military Rebate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>False</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_trim__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Model trim</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Points__c</fullName>
        <formula>IF( LastName  !=&apos;&apos;, &quot;0&quot;, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Points__c</fullName>
        <formula>CASE(Ownership__c, 
&quot;Lease&quot;, &quot;5&quot;, 
&quot;Finance&quot;, &quot;5&quot;, 
&quot;Own&quot;, &quot;5&quot;, 
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Own</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_2__c</fullName>
        <label>Payment 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly payment</fullName>
                </value>
                <value>
                    <fullName>One-time payment</fullName>
                </value>
                <value>
                    <fullName>Cash purchase</fullName>
                </value>
                <value>
                    <fullName>An auto loan through a financial institution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
                <value>
                    <fullName>Cash purchase</fullName>
                </value>
                <value>
                    <fullName>Car loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Point__c</fullName>
        <formula>IF( Phone !=&apos;&apos;, &quot;0&quot;, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Point</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by2__c</fullName>
        <label>Referred by2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_2__c</fullName>
        <label>Registration 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, it&apos;s time for an upgrade</fullName>
                </value>
                <value>
                    <fullName>Yes, but I&apos;d like to get another one</fullName>
                </value>
                <value>
                    <fullName>No, not yet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Points__c</fullName>
        <formula>CASE(Registration__c, 
&quot;Transfer&quot;, &quot;0&quot;,
&quot;Registered, new plates&quot;, &quot;0&quot;,
&quot;New plates&quot;, &quot;0&quot;,
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Registration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Registered, new plates</fullName>
                </value>
                <value>
                    <fullName>New plates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade3__c</fullName>
        <label>Trade3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, it&apos;s time for an upgrade</fullName>
                </value>
                <value>
                    <fullName>Yes, but I&apos;d like to get another one</fullName>
                </value>
                <value>
                    <fullName>No, not yet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade_2__c</fullName>
        <label>Trade 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, I&apos;d like to trade-in my car!</fullName>
                </value>
                <value>
                    <fullName>Nope, I just want to sell it!</fullName>
                </value>
                <value>
                    <fullName>(Cash Purchase) No Trade-in against Lease</fullName>
                    <isActive>false</isActive>
                    <label>(Cash Purchase) No Trade-in against Lease</label>
                </value>
                <value>
                    <fullName>No, not yet</fullName>
                    <isActive>false</isActive>
                    <label>No, not yet</label>
                </value>
                <value>
                    <fullName>Sell for cash</fullName>
                    <isActive>false</isActive>
                    <label>Sell for cash</label>
                </value>
                <value>
                    <fullName>Yes, but I&apos;d like to get another one!</fullName>
                    <isActive>false</isActive>
                    <label>Yes, but I&apos;d like to get another one</label>
                </value>
                <value>
                    <fullName>Yes, it&apos;s time for an upgrade</fullName>
                    <isActive>false</isActive>
                    <label>Yes, it&apos;s time for an upgrade</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade_Points__c</fullName>
        <formula>CASE(Trade__c, 
&quot;Yes&quot;, &quot;5&quot;, 
&quot;No&quot;, &quot;0&quot;, 
&quot;Sell&quot;, &quot;80&quot;,
&quot;Possible Trade&quot;, &quot;10&quot;, 
&quot;0&quot;)</formula>
        <label>Trade Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <inlineHelpText>Please check MMR and CarFax</inlineHelpText>
        <label>Trade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Sell</fullName>
                </value>
                <value>
                    <fullName>Possible Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Vehicle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Make_Model_VIN_Points__c</fullName>
        <formula>IF( Year_Make_Model_VIN__c =&apos;&apos;, &quot;0&quot;, &quot;5&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year, Make, Model, VIN Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Make_Model_VIN__c</fullName>
        <label>Year, Make, Model, VIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Current_car_contract_unpaid_balance</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
OR (
ISPICKVAL(Ownership__c, &quot;Lease&quot;),
ISPICKVAL(Ownership__c, &quot;Finance&quot;),

ISPICKVAL(Balance2__c,&apos;&apos;)
   ))</errorConditionFormula>
        <errorDisplayField>Balance2__c</errorDisplayField>
        <errorMessage>Please select Current car contract unpaid balance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Current_car_information</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
   ISPICKVAL (Year_Make_Model_VIN__c, &quot;Have a car&quot;), 
   OR(
   ISBLANK(Make__c),
   ISBLANK(Model_trim__c),
   ISBLANK(Car_notes__c)
))</errorConditionFormula>
        <errorDisplayField>Car_notes__c</errorDisplayField>
        <errorMessage>Please fill VIN or Year, Make and Model trim fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Current_car_ownership</fullName>
        <active>false</active>
        <errorConditionFormula>AND ( 
	OR ( 
		ISPICKVAL(Ownership__c, &quot;Lease&quot;), 
		ISPICKVAL(Ownership__c, &quot;Finance&quot;)),
		or(
		ISBLANK(Maturity_Date__c), 
		ISBLANK(Text(Balance2__c)) 
	)
)</errorConditionFormula>
        <errorDisplayField>Maturity_Date__c</errorDisplayField>
        <errorMessage>Please select contract end date &amp; Current car contract unpaid balance</errorMessage>
    </validationRules>
</CustomObject>